bin/tests/snapshots/inherit_first__32f91200a9211c1c9347784c590443b6_fix.snap
---
source: bin/tests/inherit_first.rs
---
{
  inherit lib;
  attrs = {
    apple = true;
    inherit zebra;
  };
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,7 +1,9 @@
 {
   inherit lib;
+
   attrs = {
+    inherit zebra;
+
     apple = true;
-    inherit zebra;
   };
 }
