bin/tests/snapshots/inherit_first__4b67ee336d03e12f768143b08fec2d42_fix.snap
---
source: bin/tests/inherit_first.rs
---
{
  apple = true;
  inherit lib;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,4 +1,5 @@
 {
-  apple = true;
   inherit lib;
+
+  apple = true;
 }
