bin/tests/snapshots/inherit_first__4b67ee336d03e12f768143b08fec2d42_lint_errfmt.snap
---
source: bin/tests/inherit_first.rs
---
{
  apple = true;
  inherit lib;
}
---
<temp_file_path>>3:3:W:38:[inherit_first] `inherit` should come before the assignments above it
