bin/tests/snapshots/inherit_first__4b67ee336d03e12f768143b08fec2d42_lint_json.snap
---
source: bin/tests/inherit_first.rs
---
{
  apple = true;
  inherit lib;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "inherit_first",
      "note": "`inherit` is not at the top of the set",
      "code": 38,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 15
            }
          },
          "message": "`inherit` should come before the assignments above it",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 4,
                "column": 2
              }
            },
            "fix": "{\n  inherit lib;\n  apple = true;\n}"
          }
        }
      ]
    }
  ]
}
