bin/tests/snapshots/inherit_first__57aa8d2449abc53a3c7f2b43a93f6ea7_fix.snap
---
source: bin/tests/inherit_first.rs
---
let
  inherit lib;
  name = "x";
in
  name
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,6 @@
 let
   inherit lib;
+
   name = "x";
 in
   name
