bin/tests/snapshots/inherit_first__57aa8d2449abc53a3c7f2b43a93f6ea7_lint_errfmt.snap
---
source: bin/tests/inherit_first.rs
---
let
  inherit lib;
  name = "x";
in
  name
---
<temp_file_path>>3:3:W:36:[inherit_blank_line] a blank line should follow the `inherit` above
